remove ImageFinder, codes are moved to Image_Impl